# exposure-render.ercore

./: .hgignore
Source/: CMakeLists.txt  align.h  alignment.h  alphapass.cuh  autofocus.cuh  bitmap.h  blendrgbauc.cuh  blinn.h  boundingbox.h  box.h  brdf.h  buffer.h  buffer1d.cpp  buffer1d.h  buffer2d.cpp  buffer2d.h  buffer3d.cpp  buffer3d.h  buffers.h  camera.h  camerasample.h  clippingobject.h  clippingobjects.h  clippingsegments.h  color.h  colorrgb.h  colorrgbaf.h  colorrgbauc.h  colorrgbf.h  colortransferfunction.h  colortransferfunction1d.h  colorxyz.h  colorxyza.h  colorxyzaf.h  colorxyzf.h  composite.cuh  compositing.cuh  core.cu  cudatexture.h  cudatexture1d.h  (+189 more)
source/: CMakeLists.txt  accelerator.h  alignment.h  bitmap.h  blendrgbauc.cuh  boundingbox.h  buffer.h  buffer2d.h  camerasample.h  colorrgbaf.h  colorrgbauc.h  colorxyzf.h  core.cu  cudatexture1d.h  cudatexture2d.h  cylinder.h  defines.h  disk.h  documentation  dvr.cuh  enums.h  exposurerender.h  filtering.cuh  framebuffer.h  fresnel.h  gaussian.h  gaussianfilterrgbauc.cuh  grid.h  hostbitmap.h  hostobject.h  hostprop.h  hosttracer.h  hostvolume.h  indices.h  intersect.cuh  intersection.h  kelvin.h  lightingsample.h  lightsample.h  macros.cuh  (+61 more)
ui/: AlignmentToolButton.py  AlignmentWidget.py  AlignmentWidget.ui  Application.py  BoolEdit.py  CameraWidget.py  Edit.py  EmitterToolButton.py  EmitterWidget.py  EmitterWidget.ui  ExposureRender.py  Float3Edit.py  FloatEdit.py  LightsModel.py  LightsWidget.py  LightsWidget.ui  LogWidget.py  LogWidget.ui  Main.py  MainWindow.py  MainWindow.ui  MatrixWidget.py  MatrixWidget.ui  ObjectWidget.py  ObjectWidget.ui  ObjectsModel.py  ObjectsWidget.py  ObjectsWidget.ui  OptionEdit.py  PropWidget.py  PropsModel.py  PropsWidget.py  PropsWidget.ui  PyQt.py  RenderDialog.py  Settings.py  ShapeToolButton.py  ShapeWidget.py  ShapeWidget.ui  StatisticsWidget.py  (+10 more)
ui/Designer/: CameraWidget.ui  MainWindow.ui  PropsWidget.ui  RenderDialog.ui  ShapeWidget.ui  TransferFunctionWidget.ui  VolumePropertyWidget.ui
ui/Edit/: BaseEdit.py  BoolEdit.py  Editable.py  Edits.py  Float3Edit.py  FloatEdit.py  IntEdit.py  OptionEdit.py  __init__.py
ui/Props/: AlignmentToolButton.py  AlignmentWidget.py  EmitterToolButton.py  EmitterWidget.py  PropWidget.py  PropsWidget.py  ShapeToolButton.py  ShapeWidget.py
ui/VolumeProperty/: TransferFunction1DWidget.py  TransferFunction2DWidget.py  TransferFunctionWidget.py  VolumePropertyWidget.py
